--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -4,3 +4,6 @@ $primary-2: #9faaaa;
 $primary-3: #9cc5a1;
 $primary-4: #dce1de;
 $primary-5: #1f2421;
+
+// Screen sizes - using Bootstrap sizes as a reference!
+$screenwidth-col-xs: 768px;
